--- a/src/components/layout/index.less
+++ b/src/components/layout/index.less
@@ -26,12 +26,37 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        text-decoration: none;
+        color: #000;
+        transition: 0.2s linear;
+
+        &:hover {
+          color: #31b2bb;
+
+          .nav-img {
+            svg {
+              fill: #31b2bb;
+            }
+          }
+        }
+
+        &.nav-item-active {
+          font-weight: bold;
+          color: #31b2bb;
+
+          .nav-img {
+            svg {
+              fill: #31b2bb;
+            }
+          }
+        }
 
         .nav-img {
           width: 45%;
 
-          img {
-            width: 100%;
+          svg {
+            transition: 0.2s linear;
+            fill: #616161;
           }
         }
       }
@@ -69,16 +94,17 @@
       border-bottom: 2px solid #F6F7F8;
       padding: 0 40px;
       display: flex;
+      justify-content: space-between;
       height: 100px;
       gap: 40px;
       -webkit-app-region: drag;
 
       .logo {
-        -webkit-app-region: no-drag;
         display: flex;
         place-items: center;
 
         img {
+          -webkit-app-region: no-drag;
           height: 50%;
         }
       }
@@ -96,12 +122,18 @@
           padding: 10px 0;
           color: #000;
           text-decoration: none;
+          transition: 0.2s ease-in-out;
+
+          &:hover {
+            color: #31b2bb;
+          }
 
           &.selector-item-active {
             font-weight: bold;
+            color: #31b2bb;
 
             &::before {
-              background-color: #000;
+              background-color: #31b2bb;
             }
           }
 
@@ -114,7 +146,7 @@
             height: 3px;
             width: calc(100% - 10px);
             background-color: transparent;
-            //transition: all 0.3s;
+            transition: all 0.3s;
             margin: auto;
           }
         }
@@ -148,7 +180,8 @@
           }
 
           .search-icon {
-            height: 60%;
+            cursor: pointer;
+            height: 45%;
           }
         }
       }
@@ -160,18 +193,24 @@
 
         .action-button {
           -webkit-app-region: no-drag;
-          background-color: #F1F2F3;
-          padding: 10px;
+          background-color: #fff;
           border-radius: 9999px;
           cursor: pointer;
-          display: flex;
-          place-items: center;
           font-size: 18px;
-          height: 45%;
+          height: 40px;
+          width: 40px;
+          display: grid;
+          place-items: center;
+          overflow: hidden;
+          transition: 0.2s ease-in-out;
+
+          &:hover {
+            background-color: #F1F2F3;
+          }
 
           img {
-            height: 100%;
-            width: 100%;
+            height: 50%;
+            width: 50%;
           }
         }
       }
