--- a/src/components/layout/index.module.less
+++ b/src/components/layout/index.module.less
@@ -211,9 +211,10 @@
             background-color: #F1F2F3;
           }
 
-          img {
+          svg {
             height: 50%;
             width: 50%;
+            fill: #616161;
           }
         }
       }
