--- a/src/components/moviesBlock/index.module.less
+++ b/src/components/moviesBlock/index.module.less
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 8px;
+    border-radius: 8px / 8.00001px;
     box-shadow: 0 0 12px rgba(0, 0, 0, .2);
     transition: all .3s;
     margin-bottom: 10px;
