--- a/src/index.less
+++ b/src/index.less
@@ -26,7 +26,10 @@
 }
 
 html, body {
+  --primary-7: 40, 144, 151;
   --primary-6: 49, 178, 187;
+  --primary-5: 49, 178, 187;
+  --link-6: 49, 178, 187;
   font-family: HarmonyOS Sans, sans-serif;
   background-color: var(--color-bg-1);
   color: var(--color-text-1);
