--- a/src/views/history/index.module.less
+++ b/src/views/history/index.module.less
@@ -1,14 +1,20 @@
-.historyMonth {
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 0 20px;
+.historyContainer {
+  margin-top: 20px;
+  position: relative;
+
+  .historyDate {
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+
+  .historyList {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 20px;
+  }
 }
 
-.historyList {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 20px;
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 20px;
-}
