--- a/src/index.less
+++ b/src/index.less
@@ -30,7 +30,7 @@ html, body {
   --primary-6: 49, 178, 187;
   --primary-5: 49, 178, 187;
   --link-6: 49, 178, 187;
-  font-family: HarmonyOS Sans, sans-serif;
+  //font-family: HarmonyOS Sans, sans-serif;
   background-color: var(--color-bg-1);
   color: var(--color-text-1);
   color-scheme: dark; // 这个属性设置后，滚动条也能表现为暗色模式
