feat(favourite): + movieBlock favourite state

--- a/src/views/history/index.module.less
+++ b/src/views/history/index.module.less
@@ -1,3 +1,10 @@
+.empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .historyContainer {
   margin-top: 20px;
   position: relative;
