--- a/src/components/moviesBlock/index.module.less
+++ b/src/components/moviesBlock/index.module.less
@@ -54,6 +54,34 @@
       z-index: -1;
       user-select: none;
     }
+
+    .favourite {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      width: 40px;
+      height: 40px;
+      color: @primary-color;
+      font-size: 20px;
+      transition: all .3s;
+      z-index: 1;
+      background-color: #bfa;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .likeIcon {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        svg {
+          width: 80%;
+          height: 80%;
+        }
+      }
+    }
   }
 
   .movieName {
