--- a/src/components/historyBlock/index.module.less
+++ b/src/components/historyBlock/index.module.less
@@ -20,6 +20,9 @@
     &:hover {
       box-shadow: 0 0 16px rgba(0, 0, 0, .4);
       transform: scale(1.02);
+      .favourite {
+        opacity: 1;
+      }
     }
 
     .skeleton, .canvas {
@@ -53,6 +56,38 @@
       opacity: 0;
       z-index: -1;
       user-select: none;
+    }
+
+    .favourite {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      width: 40px;
+      height: 40px;
+      color: @primary-color;
+      font-size: 20px;
+      transition: all .3s;
+      z-index: 1;
+      background-color: rgba(0,0,0,.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      opacity: 0;
+      border-radius: 8px / 8.00001px;
+
+      .likeIcon {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        svg {
+          width: 70%;
+          height: 70%;
+          fill: #fff;
+        }
+      }
     }
   }
 
