--- a/src/components/moviesBlock/index.override.less
+++ b/src/components/moviesBlock/index.override.less
@@ -4,3 +4,12 @@
     height: 100%;
   }
 }
+.tooltipOverride {
+  user-select: none;
+  .arco-trigger-arrow-container {
+    display: none;
+  }
+  .arco-tooltip-content {
+    background-color: rgba(0,0,0,.5);
+  }
+}
