feat(player): + add all of player feature!

--- a/src/components/publicLoading/index.module.less
+++ b/src/components/publicLoading/index.module.less
@@ -3,4 +3,10 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: 100%;
+}
+
+.spinContainerFullScreen {
+  width: 100lvw;
+  height: 100lvh;
 }
