--- a/src/views/player/index.module.less
+++ b/src/views/player/index.module.less
@@ -1,3 +1,5 @@
+@import "../../assets/css/variable.less";
+
 @tab-height: 50px;
 
 .tab {
@@ -58,6 +60,7 @@
     display: flex;
     flex-direction: column;
     color: #fff;
+
     &.playListActive {
       flex-basis: 35%;
     }
@@ -65,12 +68,83 @@
     .playListTitle {
       font-size: 18px;
       padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .playListActions {
+        display: flex;
+        place-items: center;
+
+        .ActionIcon {
+          width: 30px;
+          background-color: transparent;
+          border-radius: 8px / 8.00001px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 5px;
+          transition: 0.2s ease-in-out;
+          cursor: pointer;
+
+          &:hover {
+            background-color: rgba(0, 0, 0, .5);
+          }
+
+          svg {
+            width: 100%;
+            height: 100%;
+            fill: #fff;
+          }
+        }
+      }
     }
+
     .playListContent {
       flex: 1;
       overflow-y: auto;
-      > div {
+
+      /* 整个滚动条 */
+
+      &::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+      }
+
+      /* 滚动条轨道 */
+
+      &::-webkit-scrollbar-track {
+        background: transparent;
+        border-radius: 10px;
+      }
+
+      /* 滚动条上的滑块 */
+
+      &::-webkit-scrollbar-thumb {
+        background: #888;
+        border-radius: 10px;
+      }
+
+      /* 当鼠标悬停在滚动条上时，滑块的样式 */
+
+      &::-webkit-scrollbar-thumb:hover {
+        background: #555;
+      }
+
+      .playListItem {
         padding: 10px;
+        cursor: pointer;
+        margin: 2px;
+        border-radius: 5px;
+        transition: 0.2s ease-in-out;
+
+        &:hover {
+          background-color: #2F3134;
+        }
+
+        &.playListItemActive {
+          background-color: @primary-color;
+        }
       }
     }
   }
