feat(player): add follow feature

--- a/src/index.less
+++ b/src/index.less
@@ -34,4 +34,7 @@ html, body {
   background-color: var(--color-bg-1);
   color: var(--color-text-1);
   color-scheme: dark; // 这个属性设置后，滚动条也能表现为暗色模式
+  width: 100lvw;
+  height: 100lvh;
+  overflow: hidden;
 }
