--- a/src/views/player/index.override.less
+++ b/src/views/player/index.override.less
@@ -1,11 +1,13 @@
 .tooltipOverride {
   user-select: none;
+  transition: 0.2s all;
 
   .arco-trigger-arrow-container {
     display: none;
   }
 
   .arco-tooltip-content {
+    white-space: nowrap;
     background-color: rgba(0, 0, 0, .5);
     margin-right: 4px;
   }
